--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "deep-freeze": "0.0.1",
     "expect": "^1.20.1",
     "lodash": "^4.13.1",
+    "node-uuid": "^1.4.7",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
