--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
     "react-hot-loader": "^1.3.0",
+    "standard": "^7.1.2",
     "webpack-dev-server": "^1.14.1"
   }
 }
