--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
+    "react-router": "^2.4.1",
     "redux": "^3.5.2"
   },
   "devDependencies": {
