--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "babel-node app.js",
-    "serve": "webpack-dev-server",
+    "serve": "babel-node dev-server.js",
     "test": "mocha --compilers js:babel-register -w test"
   },
   "author": "",
@@ -13,6 +13,7 @@
   "dependencies": {
     "deep-freeze": "0.0.1",
     "expect": "^1.20.1",
+    "koa": "^1.2.0",
     "lodash": "^4.13.1",
     "node-uuid": "^1.4.7",
     "react": "^15.1.0",
@@ -30,6 +31,8 @@
     "babel-preset-stage-2": "^6.5.0",
     "react-hot-loader": "^1.3.0",
     "standard": "^7.1.2",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-hot-middleware": "^2.10.0"
   }
 }
