--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
-    "react-router": "^2.4.1",
+    "react-router": "^3.0.0-alpha.1",
     "redux": "^3.5.2"
   },
   "devDependencies": {
