--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0-alpha.1",
-    "redux": "^3.5.2"
+    "redux": "^3.5.2",
+    "redux-logger": "^2.6.1",
+    "redux-promise": "^0.5.3"
   },
   "devDependencies": {
     "babel-cli": "^6.9.0",
