--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-router": "^3.0.0-alpha.1",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
-    "redux-promise": "^0.5.3"
+    "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.9.0",
